--- a/todo.txt
+++ b/todo.txt
@@ -1,11 +1,7 @@
 compile and deploy all contracts
-fix proposal interactions 
-fix tables
-add feedback to listings
-allow 
-
-test getter of public maps?
-test proposal features
+fix proposals voting percentage contract/app functions 
+fix tables for proposals and buying/selling to update stats
+add feedback to listings (box in table)
+add callbacks for confirmation of transactions
 test abortion/dispute feature
-test buyselling feature
 
