--- a/todo.txt
+++ b/todo.txt
@@ -1,15 +1,10 @@
-ag grid not functioning. all columns are overlapping on left!
+automatically filter old unpurchased items, 
+add ability to view all items
+add ability to remove item(s) from clients view, remember which ones are hidden
 
+check jquery? $ not found in market
 
-
-
-
-
-
-automatically filter old unpurchased items, add ability to remove item(s) from clients view
-
-install jquery and get datatables running using the test data
-
+get market access setup 
 
 tests:
 
