--- a/todo.txt
+++ b/todo.txt
@@ -1,14 +1,19 @@
-connect to deployed contract, use a global variable?
-
 write code to pre-load data and set up relationships
+
+does market need get-methods in solidity to access order and listing information? 
+
 
 automatically filter old unpurchased items, 
 add ability to view all items
 add ability to remove item(s) from clients view, remember which ones are hidden
 
-check jquery? $ not found in market
 
-get market access setup 
+
+
+
+
+eventually:
+set up file to only use the base contract, pull address of deployed market contract from base and fixed ABI
 
 tests:
 
